--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   background: linear-gradient(to bottom right, #00c6ff, #0072ff); /* keep your gradient */
 }
   <div class="card">
-    <h1>🌱 4&quot; Soil Temperature</h1>
+    <h1>🌱 4"; Soil Temperature</h1>
     <div id="content">Loading...</div>
   </div>
 
