--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     .high .val { color: #ff5577; }
     .low .val { color: #4ea3ff; }
     .avg .val { color: #ffbf47; }
+    .trend .val.up { color: #ffbf47; }   /* gold for warming */
+    .trend .val.down { color: #4ea3ff; } /* blue for cooling */
+    .trend .hint { font-size: 12px; color: #9fb3c8; }
   </style>
 </head>
 <body>
@@ -48,7 +51,12 @@
     (async () => {
       const loggerName = "25x4gcityw";   // your logger name
       const tz = "America/Chicago";      // CST/CDT
-      const url = `/.netlify/functions/soil-temp?name=${loggerName}&tz=${encodeURIComponent(tz)}`;
+      // Ask the API for 30 days so we can compute both 7d and 30d trends
+      const url = `/.netlify/functions/soil-temp?name=${encodeURIComponent(loggerName)}&tz=${encodeURIComponent(tz)}&days=30`;
+
+      const toF = c => Math.round((c * 9/5 + 32) * 10) / 10;
+      const deltaToF = dc => Math.round((dc * 9/5) * 10) / 10; // convert delta °C -> delta °F
+      const signed = n => (n > 0 ? `+${n}` : `${n}`);          // show + sign
 
       try {
         const res = await fetch(url);
@@ -59,28 +67,50 @@
           return;
         }
 
-        const toF = c => Math.round((c * 9/5 + 32) * 10) / 10;
+        // Prepare trend display helpers
+        const trendRow = (label, deltaC) => {
+          if (deltaC === null || deltaC === undefined) {
+            return `
+              <div class="row trend">
+                <div class="label">${label}</div>
+                <div class="val">—</div>
+                <div class="hint">insufficient data</div>
+              </div>`;
+          }
+          const dF = deltaToF(deltaC);
+          const cls = dF >= 0 ? "up" : "down";
+          return `
+            <div class="row trend">
+              <div class="label">${label}</div>
+              <div class="val ${cls}">${signed(dF.toFixed(1))}°</div>
+              <div class="hint">vs window average</div>
+            </div>`;
+        };
 
         document.getElementById("content").innerHTML = `
           <div class="row current">
             <div class="label">Current</div>
             <div class="val">${toF(data.current.value)}°F</div>
-            <div class="time">${data.current.time}</div>
+            <div class="time">${data.current.time} (${tz})</div>
           </div>
           <div class="row high">
             <div class="label">High</div>
-            <div class="val">${toF(data.high.value)}°F</div>
-            <div class="time">${data.high.time}</div>
+            <div class="val">${data.high ? toF(data.high.value) : "—"}°F</div>
+            <div class="time">${data.high ? data.high.time + " (" + tz + ")" : "—"}</div>
           </div>
           <div class="row low">
             <div class="label">Low</div>
-            <div class="val">${toF(data.low.value)}°F</div>
-            <div class="time">${data.low.time}</div>
+            <div class="val">${data.low ? toF(data.low.value) : "—"}°F</div>
+            <div class="time">${data.low ? data.low.time + " (" + tz + ")" : "—"}</div>
           </div>
           <div class="row avg">
-            <div class="label">Average</div>
-            <div class="val">${toF(data.avg)}°F</div>
+            <div class="label">Average (today)</div>
+            <div class="val">${data.avg !== null ? toF(data.avg) : "—"}°F</div>
+            <div class="time">${data.count ?? 0} readings today</div>
           </div>
+
+          ${trendRow("7-day trend",  data.trend7d?.delta ?? null)}
+          ${trendRow("30-day trend", data.trend30d?.delta ?? null)}
         `;
       } catch (e) {
         document.getElementById("content").textContent = "Fetch error: " + e.message;
