--- a/index.html
+++ b/index.html
@@ -5,39 +5,86 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🌱 6" Soil Temperature</title>
   <style>
+    :root {
+      --bg: #0a1325;
+      --card: #111f3b;
+      --muted: #9fb3c8;
+      --border: rgba(255,255,255,.1);
+      --divider: rgba(255,255,255,.08);
+      --ok: #33d17a;
+      --hi: #ff5577;
+      --lo: #4ea3ff;
+      --avg: #ffbf47;
+    }
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #0a1325;
+      background: var(--bg);
       color: #e6eef7;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
     }
     .card {
-      width: min(92vw, 420px);
-      background: #111f3b;
-      border: 1px solid rgba(255,255,255,.1);
+      width: min(92vw, 460px);
+      background: var(--card);
+      border: 1px solid var(--border);
       border-radius: 16px;
       box-shadow: 0 8px 25px rgba(0,0,0,.6);
       padding: 20px;
       text-align: center;
     }
     .title { font-weight: 800; font-size: 20px; margin-bottom: 4px; }
-    .sub { color: #9fb3c8; font-size: 14px; margin-bottom: 16px; }
+    .sub { color: var(--muted); font-size: 14px; margin-bottom: 16px; }
     .row { padding: 14px 0; }
-    .row + .row { border-top: 1px solid rgba(255,255,255,.08); }
+    .row + .row { border-top: 1px solid var(--divider); }
     .label { font-weight: 700; }
     .val { font-weight: 800; font-size: 26px; margin: 4px 0; }
-    .time { font-size: 12px; color: #9fb3c8; }
-    .current .val { color: #33d17a; }
-    .high .val { color: #ff5577; }
-    .low .val { color: #4ea3ff; }
-    .avg .val { color: #ffbf47; }
-    .trend .val.up { color: #ffbf47; }   /* gold for warming */
-    .trend .val.down { color: #4ea3ff; } /* blue for cooling */
-    .trend .hint { font-size: 12px; color: #9fb3c8; }
+    .time { font-size: 12px; color: var(--muted); }
+    .current .val { color: var(--ok); }
+    .high .val { color: var(--hi); }
+    .low .val { color: var(--lo); }
+    .avg .val { color: var(--avg); }
+
+    /* Trends section */
+    .section {
+      text-align: left;
+      margin-top: 16px;
+    }
+    .section h3 {
+      margin: 0 0 10px 0;
+      font-size: 14px;
+      letter-spacing: .02em;
+      text-transform: uppercase;
+      color: var(--muted);
+    }
+    .trend-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+    }
+    .trend-tile {
+      background: rgba(255,255,255,0.03);
+      border: 1px solid var(--divider);
+      border-radius: 12px;
+      padding: 12px;
+      text-align: center;
+    }
+    .trend-tile .t-label {
+      font-size: 12px;
+      color: var(--muted);
+      font-weight: 700;
+      margin-bottom: 6px;
+    }
+    .trend-tile .t-val {
+      font-size: 24px;
+      font-weight: 900;
+      line-height: 1.1;
+    }
+    .t-up { color: var(--avg); }  /* warming (gold) */
+    .t-down { color: var(--lo); } /* cooling (blue) */
   </style>
 </head>
 <body>
@@ -51,12 +98,12 @@
     (async () => {
       const loggerName = "25x4gcityw";   // your logger name
       const tz = "America/Chicago";      // CST/CDT
-      // Ask the API for 30 days so we can compute both 7d and 30d trends
+      // Pull 30 days so we can show both 7d & 30d trends
       const url = `/.netlify/functions/soil-temp?name=${encodeURIComponent(loggerName)}&tz=${encodeURIComponent(tz)}&days=30`;
 
       const toF = c => Math.round((c * 9/5 + 32) * 10) / 10;
-      const deltaToF = dc => Math.round((dc * 9/5) * 10) / 10; // convert delta °C -> delta °F
-      const signed = n => (n > 0 ? `+${n}` : `${n}`);          // show + sign
+      const deltaToF = dc => Math.round((dc * 9/5) * 10) / 10;
+      const signed = n => (n > 0 ? `+${n}` : `${n}`);
 
       try {
         const res = await fetch(url);
@@ -67,24 +114,23 @@
           return;
         }
 
-        // Prepare trend display helpers
-        const trendRow = (label, deltaC) => {
+        const trendTile = (label, deltaC) => {
           if (deltaC === null || deltaC === undefined) {
             return `
-              <div class="row trend">
-                <div class="label">${label}</div>
-                <div class="val">—</div>
-                <div class="hint">insufficient data</div>
-              </div>`;
+              <div class="trend-tile">
+                <div class="t-label">${label}</div>
+                <div class="t-val">—</div>
+              </div>
+            `;
           }
           const dF = deltaToF(deltaC);
-          const cls = dF >= 0 ? "up" : "down";
+          const cls = dF >= 0 ? "t-up" : "t-down";
           return `
-            <div class="row trend">
-              <div class="label">${label}</div>
-              <div class="val ${cls}">${signed(dF.toFixed(1))}°</div>
-              <div class="hint">vs window average</div>
-            </div>`;
+            <div class="trend-tile">
+              <div class="t-label">${label}</div>
+              <div class="t-val ${cls}">${signed(dF.toFixed(1))}°</div>
+            </div>
+          `;
         };
 
         document.getElementById("content").innerHTML = `
@@ -109,8 +155,13 @@
             <div class="time">${data.count ?? 0} readings today</div>
           </div>
 
-          ${trendRow("7-day trend",  data.trend7d?.delta ?? null)}
-          ${trendRow("30-day trend", data.trend30d?.delta ?? null)}
+          <div class="section">
+            <h3>Trends</h3>
+            <div class="trend-grid">
+              ${trendTile("7-day trend",  data.trend7d?.delta)}
+              ${trendTile("30-day trend", data.trend30d?.delta)}
+            </div>
+          </div>
         `;
       } catch (e) {
         document.getElementById("content").textContent = "Fetch error: " + e.message;
